--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -5,9 +6,9 @@
 <meta name="description" content="The HTML5 Herald">
 <meta name="author" content="SitePoint">
 <link rel="stylesheet" href="css/styles.css?v=1.0">
-/*[if lt IE 9]
+<![if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-[endif]*/
+<![endif]>
 </head>
 <body>
 Hello world
